force-app/main/default/objects/Unit_Set_Attempt_Qualification__c.object
<CustomObject>
    <description>Junction object between a Contact Qual and Unit Set Attempt</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Unit Set Attempt Category</description>
        <formula>Unit_Set_Attempt__r.Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Qualification</label>
        <referenceTo>Contact_Qualification__c</referenceTo>
        <relationshipLabel>Unit Set Attempts</relationshipLabel>
        <relationshipName>Unit_Set_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <description>Qualification achieved date</description>
        <formula>Contact_Qualification__r.Date_Achieved__c</formula>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>Qualification Graduation Date</description>
        <formula>Contact_Qualification__r.Graduation_Date__c</formula>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirements_Completed__c</fullName>
        <description>Unit Set Attempt Requirements Complete Date</description>
        <formula>Unit_Set_Attempt__r.Requirements_Complete_Date__c</formula>
        <label>Requirements Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Qualification Title</description>
        <formula>Contact_Qualification__r.Qualification_Name__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Set_Attempt__c</fullName>
        <label>Unit Set Attempt</label>
        <referenceTo>Unit_Set_Attempt__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualificarions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Set__c</fullName>
        <description>Unit Set Name</description>
        <formula>Unit_Set_Attempt__r.Title__c</formula>
        <label>Unit Set</label>
        <type>Text</type>
    </fields>
    <label>Unit Set Attempt Qualification</label>
    <nameField>
        <displayFormat>USAQ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Set Attempt Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>